# excel_insight

./: .gitignore  Excel_Insights_App_Design.docx  README.md  app.py  pyproject.toml
excel_insights/: app_state.py  config.py  parser.py
excel_insights/graph/: build.py  nodes.py  state.py
excel_insights/graph/nodes/: __init__.py  create_agent.py  guardrail.py  schemas.py
excel_insights/nodes/: guardrail.py  nodes.py  schemas.py
excel_insights/ui_components/: config_manager.py  insight.py  objective.py  sheet_management.py
