[project]
name = "excel-insights"
version = "0.1.0"
description = "This project derives insights from uploaded excel files and creates a custom dashboard per user requirement"
authors = [
    {name = "ab1ndal",email = "bindal.abhinav@gmail.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "streamlit (>=1.49.1,<2.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "plotly (>=6.3.0,<7.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "polars (>=1.33.1,<2.0.0)",
    "fastexcel (>=0.16.0,<0.17.0)",
    "langgraph (>=0.6.7,<0.7.0)",
    "langchain-openai (>=0.3.33,<0.4.0)",
    "openai (>=1.109.1,<2.0.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "openai-agents (>=0.3.2,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
